--- a/src/template/index.html
+++ b/src/template/index.html
@@ -83,6 +83,9 @@
         <h2 class="govuk-heading-m">Database connection</h2>
         <p class="govuk-body">Yes, we have a database attached!</p>
         {{/database}}
+
+
+<p>woowoowoo</p>
       </main>
     </div>
 
